Archive2/09/331d48a99283ee/output
main.cpp:1:5: error: 'result' does not name a type
     result: (a & b)
     ^
